--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1132,6 +1132,9 @@
     <string name="map_mycaches_hide">Hide own/found caches</string>
     <string name="map_disabled_hide">Hide disabled caches</string>
     <string name="map_archived_hide">Hide archived caches</string>
+    <string name="map_hidewp_original">Hide original waypoints</string>
+    <string name="map_hidewp_parking">Hide parking waypoints</string>
+    <string name="map_hidewp_visited">Hide visited waypoints</string>
     <string name="map_theme_builtin">Default</string>
     <string name="map_theme_select">Select map theme</string>
     <string name="map_theme_options">Theme Options</string>
