--- a/main/res/values-it/strings.xml
+++ b/main/res/values-it/strings.xml
@@ -969,9 +969,10 @@
     <string name="internal_cache_default_description">Questo è un cache definito dall\'utente</string>
     <string name="internal_cache_default_owner">Tu</string>
     <string name="internal_goto_targets_title">Obiettivi \"Vai a\"</string>
-    <string name="internal_goto_targets_description">Questo cache memorizza i tuoi recenti obiettivi \"Vai a\"</string>
+    <string name="internal_goto_targets_description">This cache stores your recent \"Go to\" targets. It is automatically created once you have used the \"Go to\" function in the main menu. The coordinates entered there will be stored into waypoints of this cache. If you do no longer need these coordinates you can safely delete this cache or any of its waypoints. Also you can move the cache to any other list of your choice.</string>
     <string name="init_longtap_udc">Tocca a lungo sulla mappa</string>
     <string name="init_summary_longtap_udc">Toccare a lungo sulla mappa per creare un cache definito dall\'utente</string>
+    <string name="goto_targets_list">Internal caches</string>
     <!-- coordinate calculator hints -->
     <string name="cc_hint_degrees">gradi</string>
     <string name="cc_hint_minutes">minuti</string>
@@ -1534,8 +1535,8 @@
     </plurals>
     <string name="command_copy_caches_progress">Copia cache nella lista %1s</string>
     <plurals name="command_copy_caches_result">
-        <item quantity="one">Cache %d copiata</item>
-        <item quantity="other">Cache %d copiate</item>
+        <item quantity="one">Copied %d cache</item>
+        <item quantity="other">Copied %d caches</item>
     </plurals>
     <string name="command_delete_caches_progress">Cancellazione cache</string>
     <plurals name="command_delete_caches_result">
