--- a/main/res/values-ru/strings.xml
+++ b/main/res/values-ru/strings.xml
@@ -985,9 +985,10 @@
     <string name="internal_cache_default_description">Это пользовательский тайник</string>
     <string name="internal_cache_default_owner">Вы</string>
     <string name="internal_goto_targets_title">\"Перейти к\" целям</string>
-    <string name="internal_goto_targets_description">Этот тайник хранит ваши недавние \"Перейти к\" цели</string>
+    <string name="internal_goto_targets_description">This cache stores your recent \"Go to\" targets. It is automatically created once you have used the \"Go to\" function in the main menu. The coordinates entered there will be stored into waypoints of this cache. If you do no longer need these coordinates you can safely delete this cache or any of its waypoints. Also you can move the cache to any other list of your choice.</string>
     <string name="init_longtap_udc">Долгое нажатие на карту</string>
     <string name="init_summary_longtap_udc">Длительное нажатие на карте для создания пользовательского тайника</string>
+    <string name="goto_targets_list">Internal caches</string>
     <!-- coordinate calculator hints -->
     <string name="cc_hint_degrees">градусы</string>
     <string name="cc_hint_minutes">минуты</string>
