--- a/main/res/values-pt/strings.xml
+++ b/main/res/values-pt/strings.xml
@@ -970,10 +970,10 @@ https://manual.cgeo.org/pt/basicuse</string>
     <string name="internal_cache_default_description">Esta é uma cache definida pelo utilizador</string>
     <string name="internal_cache_default_owner">Você</string>
     <string name="internal_goto_targets_title">Destinos \'Ir para\'</string>
-    <string name="internal_goto_targets_description">This cache stores your recent \"Go to\" targets. It is automatically created once you have used the \"Go to\" function in the main menu. The coordinates entered there will be stored into waypoints of this cache. If you do no longer need these coordinates you can safely delete this cache or any of its waypoints. Also you can move the cache to any other list of your choice.</string>
+    <string name="internal_goto_targets_description">Esta cache guarda os seus destinos recentes de \"Ir para\". Isto é gerado automaticamente assim que utilize a função \"Ir para\" do menu principal. As coordenadas inseridas serão guardadas como pontos adicionais dessa cache. Se não precisar mais dessas coordenadas pode, de forma segura, eliminar esta cache ou quaisquer dos seus pontos adicionais. Também pode mover esta cache para qualquer lista à sua escolha.</string>
     <string name="init_longtap_udc">Toque longo no mapa</string>
     <string name="init_summary_longtap_udc">Toque longo no mapa para criar uma cache definida pelo utilizador</string>
-    <string name="goto_targets_list">Internal caches</string>
+    <string name="goto_targets_list">Caches internas</string>
     <!-- coordinate calculator hints -->
     <string name="cc_hint_degrees">graus</string>
     <string name="cc_hint_minutes">minutos</string>
