extend map settings to hide archived caches and/or certain waypoints
* add 'hide archived caches' option to map settings (fix #7848)
* add map option to hide certain waypoint types (fix #5118)
* move hide options to separate submenu
* make new hide settings available in global settings menu
* separate impacts from isExcludeDisabled and isExcludeArchived

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -595,6 +595,8 @@
     <string name="init_summary_brouterShowBothDistances">If routing is active: Show the straight distance in addition to the calculated route length.</string>
     <string name="init_disabled">Exclude Disabled</string>
     <string name="init_summary_disabled">Exclude disabled caches</string>
+    <string name="init_archived">Exclude Archived</string>
+    <string name="init_summary_archived">Exclude archived caches</string>
     <string name="init_save_log_img">Save Images</string>
     <string name="init_summary_save_log_img">Save Images from Logs</string>
     <string name="init_units">Use Imperial Units</string>
@@ -1126,12 +1128,21 @@
     <string name="map_live">Live map</string>
     <string name="map_view_map">Map view</string>
     <string name="map_modes">Map settings</string>
+    <string name="map_hide">Hide</string>
     <string name="map_trail_show">Show trail</string>
     <string name="map_dot_mode">Use compact icons</string>
     <string name="map_autorotate">Map autorotate</string>
     <string name="map_circles_show">Show circles</string>
     <string name="map_mycaches_hide">Hide own/found caches</string>
     <string name="map_disabled_hide">Hide disabled caches</string>
+    <string name="map_archived_hide">Hide archived caches</string>
+    <string name="map_hidewp_original">Hide original waypoints</string>
+    <string name="map_hidewp_parking">Hide parking waypoints</string>
+    <string name="map_hidewp_visited">Hide visited waypoints</string>
+    <string name="init_hidewp">Hide waypoints</string>
+    <string name="init_summary_hidewp_original">Hide original waypoints on the map</string>
+    <string name="init_summary_hidewp_parking">Hide parking waypoints on the map</string>
+    <string name="init_summary_hidewp_visited">Hide visited waypoints on the map</string>
     <string name="map_theme_builtin">Default</string>
     <string name="map_theme_select">Select map theme</string>
     <string name="map_theme_options">Theme Options</string>
