--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -857,6 +857,8 @@
     <string name="cache_log_images_title">Log images</string>
     <string name="cache_log_image_default_title">Photo</string>
     <string name="cache_personal_note">Personal note</string>
+    <string name="cache_menu_preventWaypointsFromNote">Prevent waypoints from note</string>
+    <string name="cache_menu_allowWaypointExtraction">Allow waypoints from note</string>
     <string name="cache_personal_note_edit">Edit</string>
     <string name="cache_personal_note_limit">Personal note limit</string>
     <string name="cache_personal_note_truncation">This personal note will be truncated after %d characters by Geocaching.com.</string>
