--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1710,5 +1710,7 @@
     <string name="individual_route_added">added to route</string>
     <string name="individual_route_removed">removed from route</string>
     <string name="individual_route_error_toggling_waypoint">error toggling waypoint</string>
+    <string name="map_clear_individual_route">Clear individual route</string>
+    <string name="map_individual_route_cleared">Individual route cleared</string>
 
 </resources>
