--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1710,4 +1710,22 @@
     <string name="edit_setting_error_invalid_data">Invalid data \"%s\" entered. Setting\'s value unchanged.</string>
     <string name="activate_editmode_title">Activate edit mode</string>
     <string name="activate_editmode_warning">You are entering dangerous area here!\n\nChanging settings directly might confuse c:geo, might prevent further program starts or might your mobile make explode!\n\nAre you sure you want to proceed at your own risk?</string>
+
+    <!-- HandleLocalFilesActivity -->
+    <string name="localfile_intenttitle">c:geo Local file handler</string>
+    <string name="localfile_title">Open a local file</string>
+    <string name="localfile_cannot_handle">c:geo cannot handle this file</string>
+    <string name="localfile_foundmap">found a map file</string>
+
+    <!-- ReceiveMapFileActivity -->
+    <string name="receivemapfile_intenttitle">Receive map file</string>
+    <string name="receivemapfile_success">Map file successfully received as \"%s\" and stored to map directory</string>
+    <string name="receivemapfile_error">Error while receiving map file</string>
+    <string name="receivemapfile_alreadyexists">A file with this name already exists. Overwrite existing file or save new file under a different name?</string>
+    <string name="receivemapfile_option_overwrite">Overwrite</string>
+    <string name="receivemapfile_option_differentname">Different name</string>
+
+    <!-- Download map preference -->
+    <string name="downloadmap_title">Download basic offline maps</string>
+    <string name="downloadmap_info">You will be redirected to a download site for basic offline maps (no themeing support).\n\nChose the .map file for your region and tap on it to download the file.\n\nWhen downloading has completed, tap on the downloaded file to set this map als current map for c:geo</string>
 </resources>
