mark distance units as translatable again

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1670,10 +1670,10 @@
     <string name="map_individual_route_cleared">Individual route cleared</string>
 
     <!-- distance units -->
-    <string translatable="false" name="unit_m">m</string>
-    <string translatable="false" name="unit_km">km</string>
-    <string translatable="false" name="unit_ft">ft</string>
-    <string translatable="false" name="unit_yd">yd</string>
-    <string translatable="false" name="unit_mi">mi</string>
+    <string name="unit_m">m</string>
+    <string name="unit_km">km</string>
+    <string name="unit_ft">ft</string>
+    <string name="unit_yd">yd</string>
+    <string name="unit_mi">mi</string>
 
 </resources>
