--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -476,6 +476,7 @@
     <string name="settings_title_map_rotation">Map rotation (Google Maps)</string>
     <string name="settings_title_waypoints">Waypoints</string>
     <string name="settings_title_map_content">Map Content</string>
+    <string name="settings_title_map_behavior">Map behavior</string>
     <string name="settings_title_gpx">GPX</string>
 
     <string name="settings_title_data_dir">Geocache data directory</string>
@@ -1002,8 +1003,8 @@
     <string name="internal_cache_default_owner">You</string>
     <string name="internal_goto_targets_title">\'Go to\' targets</string>
     <string name="internal_goto_targets_description">This cache stores your recent \"Go to\" targets. It is automatically created once you have used the \"Go to\" function in the main menu. The coordinates entered there will be stored into waypoints of this cache. If you do no longer need these coordinates you can safely delete this cache or any of its waypoints. Also you can move the cache to any other list of your choice.</string>
-    <string name="init_longtap_udc">Long tap on map</string>
-    <string name="init_summary_longtap_udc">Long tap on map to create a user defined cache</string>
+    <string name="init_longtap_map">Long tap on map</string>
+    <string name="init_summary_longtap_map">Activate long tap on map icon (create an individual route) or on free map space (create a user defined cache)</string>
     <string name="goto_targets_list">Internal caches</string>
 
     <!-- coordinate calculator hints -->
