--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1001,6 +1001,11 @@
     <string name="cache_time_full_hours">o\'clock</string>
     <string name="cache_listed_on">Listed on %s</string>
 
+    <string name="start_whereyougo">Start WhereYouGo</string>
+    <string name="cache_start_whereyougo">Start this cartridge with WhereYouGo</string>
+    <string name="need_whereyougo">You need the WhereYouGo player to run this cartridge.\n\nYou will be redirected now to download and install this app.</string>
+    <string name="redirect_whereyougo">You will be redirected to WhereYouGo to download and start the cartridge.</string>
+
     <string name="user_defined_caches">User defined caches</string>
     <string name="create_internal_cache">Create user defined cache</string>
     <string name="internal_cache_default_name">User defined cache #%1$d</string>
