--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -386,7 +386,7 @@
     <string name="caches_filter_rating">With rating</string>
     <string name="caches_filter_own_rating">With own rating</string>
     <string name="caches_filter_multi_listing">Multi listing with different state</string>
-    <string name="caches_filter_own_waypoint">With user defined waypoints</string>
+    <string name="caches_filter_own_waypoint">With user-defined waypoints</string>
     <string name="caches_filter_missing_gcvote">Found caches not voted</string>
     <string name="caches_filter_lists">Assigned to a list</string>
     <string name="caches_filter_empty">(empty)</string>
@@ -1001,14 +1001,14 @@
     <string name="cache_whereyougo_start">Open WhereYouGo to download and start this cartridge</string>
     <string name="cache_whereyougo_install">Install WhereYouGo player to download and start this cartridge</string>
 
-    <string name="create_internal_cache">Create user defined cache</string>
+    <string name="create_internal_cache">Create user-defined cache</string>
     <string name="internal_cache_default_name">User defined cache #%1$d</string>
-    <string name="internal_cache_default_description">This is a user defined cache</string>
+    <string name="internal_cache_default_description">This is a user-defined cache</string>
     <string name="internal_cache_default_owner">You</string>
     <string name="internal_goto_targets_title">\'Go to\' targets</string>
     <string name="internal_goto_targets_description">This cache stores your recent \"Go to\" targets. It is automatically created once you have used the \"Go to\" function in the main menu. The coordinates entered there will be stored into waypoints of this cache. If you do no longer need these coordinates you can safely delete this cache or any of its waypoints. Also you can move the cache to any other list of your choice.</string>
     <string name="init_longtap_map">Long tap on map</string>
-    <string name="init_summary_longtap_map">Activate long tap on map icon (create an individual route) or on free map space (create a user defined cache)</string>
+    <string name="init_summary_longtap_map">Activate long tap on map icon (create an individual route) or on free map space (create a user-defined cache)</string>
     <string name="goto_targets_list">Internal caches</string>
     <string name="clear_goto_history_title">Clear goto history</string>
     <string name="clear_goto_history">This will delete all historical waypoints except the five most recent</string>
