--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1676,6 +1676,7 @@
     <string name="individual_route_added">added to route</string>
     <string name="individual_route_removed">removed from route</string>
     <string name="individual_route_error_toggling_waypoint">error toggling waypoint</string>
+    <string name="individual_route_error_single_waypoint_mode">Not available in single waypoint mode</string>
     <string name="map_clear_individual_route">Clear individual route</string>
     <string name="map_individual_route_cleared">Individual route cleared</string>
 
