auto select compact icon mode (optional)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1714,6 +1714,7 @@
 
     <!-- switch settings -->
     <string name="switch_off">Off</string>
+    <string name="switch_on">On</string>
     <string name="switch_manual">Manual</string>
     <string name="switch_auto">Automatic</string>
 
